test/compilable/extra-files/test14894main.d
import test14894a;

void main()
{
    Foo foo;
    foo.onReceive();
}
