test/fail_compilation/fail320.d
import imports.fail320a;
import imports.fail320b;
void main() { foo(); }
